[gd_scene load_steps=13 format=3 uid="uid://cmfefink4sgxd"]

[ext_resource type="Texture2D" uid="uid://cn4ufljjjyfsj" path="res://Assets/UI/PNG/Grey/Default/button_square_flat.png" id="1_7e5iv"]
[ext_resource type="Script" uid="uid://bftofx5nw3thn" path="res://Scripts/notes_screen.gd" id="1_jd2wj"]
[ext_resource type="FontFile" uid="uid://cklnct7lhakjq" path="res://Assets/Fonts/SometypeMono-VariableFont_wght.ttf" id="1_ridw5"]
[ext_resource type="Texture2D" uid="uid://bh8hku38nlcbm" path="res://Assets/UI/PNG/Grey/Default/button_square_depth_flat.png" id="2_jd2wj"]
[ext_resource type="Texture2D" uid="uid://bk5srlmr6rk6e" path="res://Assets/UI/PNG/Blue/Default/button_rectangle_depth_gloss.png" id="3_8ywov"]
[ext_resource type="Texture2D" uid="uid://ne3oc7wyq52m" path="res://Assets/UI/PNG/Blue/Default/button_rectangle_flat.png" id="4_c7o5h"]
[ext_resource type="Texture2D" uid="uid://bkossoj1jjouh" path="res://Assets/UI/PNG/Blue/Default/button_rectangle_depth_line.png" id="5_7bbxx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nh604"]
texture = ExtResource("3_8ywov")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7hb25"]
texture = ExtResource("4_c7o5h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_itt3n"]
texture = ExtResource("3_8ywov")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufx0n"]
texture = ExtResource("4_c7o5h")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jb2ks"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_offset = Vector2(1, 1)

[node name="notes_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jd2wj")

[node name="ColorRect" type="NinePatchRect" parent="."]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7e5iv")
patch_margin_left = 5
patch_margin_top = 6
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Panel2" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.11
anchor_top = 0.893
anchor_right = 0.86
anchor_bottom = 0.971
offset_top = -0.500122
offset_bottom = 0.499878
texture = ExtResource("2_jd2wj")
patch_margin_left = 6
patch_margin_top = 7
patch_margin_right = 6
patch_margin_bottom = 10

[node name="ButtonSave" type="Button" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.093
anchor_top = 0.291
anchor_right = 0.449
anchor_bottom = 0.727
offset_left = 0.25
offset_top = -0.0150032
offset_right = 0.249969
offset_bottom = 0.0449905
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxTexture_nh604")
theme_override_styles/normal = SubResource("StyleBoxTexture_7hb25")
text = "Guardar nota"

[node name="ButtonCancel" type="Button" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.581
anchor_top = 0.285
anchor_right = 0.937
anchor_bottom = 0.721
offset_left = 0.249969
offset_top = -0.0250053
offset_right = 0.25
offset_bottom = 0.034996
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxTexture_itt3n")
theme_override_styles/normal = SubResource("StyleBoxTexture_ufx0n")
text = "Cancelar"

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.019
anchor_right = 0.978
anchor_bottom = 0.129
offset_left = -6.0
offset_top = 0.499998
offset_right = -6.10352e-05
offset_bottom = 0.499985
texture = ExtResource("5_7bbxx")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 5
patch_margin_bottom = 7

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.103
anchor_right = 0.976
anchor_bottom = 0.867
offset_left = 0.259998
offset_top = 0.00499916
offset_right = -0.00805664
offset_bottom = -0.0550079
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ridw5")
theme_override_font_sizes/font_size = 40
text = "Nueva nota"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.039
anchor_top = 0.151
anchor_right = 0.224
anchor_bottom = 0.188
offset_top = 0.499985
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ridw5")
theme_override_font_sizes/font_size = 40
text = "Titulo: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEditContent" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 305.0
offset_right = 976.0
offset_bottom = 1298.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_jb2ks")

[node name="TextEditTitle" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 223.0
offset_top = 232.0
offset_right = 977.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_jb2ks")

[connection signal="pressed" from="Panel2/ButtonSave" to="." method="_on_button_save_pressed"]
